--- a/frontend/dog/src/app/components/detalle-dog/detalle-dog.html
+++ b/frontend/dog/src/app/components/detalle-dog/detalle-dog.html
@@ -61,10 +61,10 @@
                     <!-- Información no disponible -->
                     } @else {
                     <div class="div-attr">
-                        <div class="img-wrapper-attr">
+                        <!-- <div class="img-wrapper-attr">
                             <i class="pi pi-angle-right" style="font-size: 20px; color: var(--g400); opacity: 0.7;"></i>
                             <p><strong>Pelaje: </strong><span class="no-disponible">No disponible</span></p>
-                        </div>
+                        </div> -->
                         <div class="img-wrapper-attr">
                             <i class="pi pi-angle-right" style="font-size: 20px; color: var(--g400); opacity: 0.7;"></i>
                             <p><strong>Altura: </strong><span class="no-disponible">No disponible</span></p>
@@ -78,17 +78,9 @@
 
                 </div>
             </section>
-
         </section>
-        <!-- 
-            Muda de pelo
-            Aseo (grooming)
-            Babeo
-            Largo del pelaje
 
-            Altura max y min
-            Peso max y min
-        -->
+
         <section class="section-props">
             <div id="section-div-props">
                 <div class="div-props">
@@ -125,28 +117,29 @@
 
 
             <div id="section-props-bottom">
-                <div class="div-props-bottom">
+                <div class="div-props-bottom"
+                    [ngClass]="[getBorderClass(ninja?.good_with_children), getBackgroundClass(ninja?.good_with_children)]">
                     <div>
-                        <img src="assets/nino_verde.png" alt="niños" class="props-bottom-img">
-                        <p [ngClass]="estados.ninos">Bueno con niños</p>
+                        <img [src]="`assets/nino-${getIconClass(ninja?.good_with_children)}.png`" alt="niños" class="props-bottom-img">
+                        <p [ngClass]="getTitleClass(ninja?.good_with_children)">Niños</p>
                     </div>
-                    <span class="s-verde">{{good_with_children_prop}}</span>
+                    <span [ngClass]="getSubtitleClass(ninja?.good_with_children)">{{good_with_children_prop}}</span>
                 </div>
-                <div class="div-props-bottom">
+                <div class="div-props-bottom"
+                    [ngClass]="[getBorderClass(ninja?.good_with_strangers!), getBackgroundClass(ninja?.good_with_strangers!)]">
                     <div>
-                        <img src="assets/extranos_verde.png" alt="extraños" class="props-bottom-img">
-                        <p [ngClass]="estados.extranos">Bueno con extraños</p>
+                        <img [src]="`assets/extranos-${getIconClass(ninja?.good_with_strangers)}.png`" alt="desconocidos" class="props-bottom-img">
+                        <p [ngClass]="getTitleClass(ninja?.good_with_strangers!)">Desconocidos</p>
                     </div>
-                    <span class="s-verde">{{good_with_strangers}}</span>
-                    <!-- <span class="s-rojo">Puede tener problemas con extraños</span> -->
+                    <span [ngClass]="getSubtitleClass(ninja?.good_with_strangers!)">{{good_with_strangers}}</span>
                 </div>
-                <div class="div-props-bottom">
+                <div class="div-props-bottom"
+                    [ngClass]="[getBorderClass(ninja?.good_with_other_dogs), getBackgroundClass(ninja?.good_with_other_dogs)]">
                     <div>
-                        <img src="assets/huella_verde.png" alt="mascotas" class="props-bottom-img">
-                        <p [ngClass]="estados.mascotas">Bueno con mascotas</p>
+                        <img [src]="`assets/huella-${getIconClass(ninja?.good_with_other_dogs)}.png`" alt="mascotas" class="props-bottom-img">
+                        <p [ngClass]="getTitleClass(ninja?.good_with_other_dogs)">Mascotas</p>
                     </div>
-                    <span class="s-verde">{{good_with_other_dogs}}</span>
-                    <!-- Puede tener problemas con otras mascotas -->
+                    <span [ngClass]="getSubtitleClass(ninja?.good_with_other_dogs)">{{good_with_other_dogs}}</span>
                 </div>
             </div>
         </section>
