--- a/frontend/dog/src/app/components/detalle-dog/detalle-dog.html
+++ b/frontend/dog/src/app/components/detalle-dog/detalle-dog.html
@@ -36,10 +36,10 @@
                     </div>
 
                     <div class="div-attr">
-                        <div class="img-wrapper-attr">
+                        <!-- <div class="img-wrapper-attr">
                             <i class="pi pi-angle-right" style="font-size: 20px; color: var(--g400); opacity: 0.7;"></i>
                             <p><strong>Pelaje: </strong> <span>{{coat_length}}</span></p>
-                        </div>
+                        </div> -->
                         <div class="img-wrapper-attr">
                             <i class="pi pi-angle-right" style="font-size: 20px; color: var(--g400); opacity: 0.7;"></i>
                             <p><strong>Altura: </strong><span>
