--- a/frontend/dog/src/app/pages/razas/razas.css
+++ b/frontend/dog/src/app/pages/razas/razas.css
@@ -1,3 +1,22 @@
+::ng-deep #p-chip {
+    cursor: pointer;
+    background-color: var(--n600) !important;
+    color: white !important;
+    font-size: 14px;
+    font-weight: 600;
+    padding: 6px 10px !important;
+}
+
+::ng-deep #p-chip:hover {
+    opacity: 0.7;
+}
+
+::ng-deep #p-chip:active {
+    background-color: var(--n100) !important;
+    color: var(--n700) !important;
+    opacity: 1;
+}
+
 .margin-header {
     margin: 2.5rem;
 }
