--- a/frontend/dog/src/styles.css
+++ b/frontend/dog/src/styles.css
@@ -5,17 +5,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --fredoka: "Fredoka", sans-serif --n100: #FFD5B8;
+    --fredoka: "Fredoka", sans-serif;
     --elms-sans: "Elms Sans", sans-serif;
 
-    --n50:  #FFF8ED;
+    --n50: #FFF8ED;
     --n100: #FFE2C4;
     --n200: #FFEDD4;
-    --n300: #FFAA4D; 
-    --n400: #EC9922;   
-    --n500: #FF8D08;  
-    --n600: #E07300;  
-    --n700: #CD3500;  
+    --n300: #FFAA4D;
+    --n400: #EC9922;
+    --n500: #FF8D08;
+    --n600: #E07300;
+    --n700: #CD3500;
 
     --g50: #EDE7DC;
     --g100: #F3F4F6;
