--- a/frontend/dog/src/app/pages/razas/razas.html
+++ b/frontend/dog/src/app/pages/razas/razas.html
@@ -1,4 +1,6 @@
 <main>
+    <app-filtro-avanzado></app-filtro-avanzado>
+
     <section id="paginatorRazas">
 
         <div class="margin-header">
@@ -38,4 +40,5 @@
         <app-detalle-dog [nombre]="selectedRaza" [(visible)]="dialogVisible"></app-detalle-dog>
         }
     </section>
+
 </main>
