--- a/frontend/dog/src/app/components/filtro-avanzado/filtro-avanzado.css
+++ b/frontend/dog/src/app/components/filtro-avanzado/filtro-avanzado.css
@@ -1,6 +1,89 @@
 aside {
-    width: 20vw;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 80vw;
     background-color: white;
     border: 1px solid var(--g50);
     border-radius: 8px;
+    margin-top: 6rem;
+    padding: 1rem;
+    font-size: 14px;
+    justify-self: center;
+    z-index: 999;
+}
+
+label {
+    color: var(--g400);
+}
+label:not(#labelPersonalidad) {
+    font-weight: 600;
+}
+
+::ng-deep .p-select {
+    font-size: 14px;
+}
+
+::ng-deep .p-select-label {
+    font-size: 14px;
+    color: var(--n700);
+}
+
+#div-title-filter{
+    display: flex;
+    align-items: last baseline;
+}
+
+
+h3 {
+    margin-bottom: 0;
+    color: var(--g400);
+}
+
+hr {
+    border: 1px solid var(--n600);
+    width: 100%;
+    opacity: 0.3;
+}
+
+
+
+/* QUERIES */
+
+@media (min-width: 576px) {}
+
+@media (min-width: 768px) {}
+
+@media (min-width: 840px) {
+    aside {
+        position: fixed;
+        width: 25vw;
+        justify-self: self-start;
+        margin-right: 1rem;
+    }
+}
+
+@media (min-width: 992px) {}
+
+@media (min-width: 1200px) {
+    aside {
+        width: 20vw;
+        font-size: 16px;
+        margin-left: 1rem;
+    }
+
+    ::ng-deep .p-select {
+        font-size: 16px;
+    }
+
+    ::ng-deep .p-select-label {
+        font-size: 16px;
+    }
+}
+
+
+@media (min-width: 1400px) {
+    aside {
+        margin-left: 2.5rem;
+    }
 }
