--- a/frontend/dog/src/app/pages/razas/razas.css
+++ b/frontend/dog/src/app/pages/razas/razas.css
@@ -1,7 +1,6 @@
 main {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
     /* justify-content: space-between; */
 }
 
@@ -32,6 +31,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 80vw;
 }
 
 #paginatorRazas div {
@@ -50,7 +50,7 @@ main {
 }
 
 .cards-container {
-    width: 50vw;
+    width: 100%;
 }
 
 #div-title {
@@ -66,3 +66,32 @@ main {
 #div-title p {
     margin: 0;
 }
+
+
+
+@media (min-width: 576px) {}
+
+
+@media (min-width: 768px) {
+    main {
+        display: flex;
+    }
+}
+
+@media (min-width: 840px) {
+    main {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+
+@media (min-width: 992px) {
+
+}
+
+
+@media (min-width: 1200px) {}
+
+
+@media (min-width: 1400px) {}
