--- a/frontend/dog/src/app/pages/razas/razas.html
+++ b/frontend/dog/src/app/pages/razas/razas.html
@@ -1,5 +1,5 @@
 <main>
-    <app-filtro-avanzado></app-filtro-avanzado>
+    <app-filtro-avanzado (filtrosChange)="onFiltrosChange($event)"></app-filtro-avanzado>
 
     <section id="paginatorRazas">
 
